[package]
name = "neuroheat"
version = "0.2.0"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.17"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28.0", features = ["full"] }
tokio-cron-scheduler = "0.13.0"
warp = "0.3.6"
